--- a/app/src/main/res/layout/activity_profile_editor.xml
+++ b/app/src/main/res/layout/activity_profile_editor.xml
@@ -6,4 +6,82 @@
     android:layout_height="match_parent"
     tools:context=".Activity.ProfileEditorActivity">
 
+    <EditText
+        android:id="@+id/etFirstNameInEditPage"
+        android:layout_width="90dp"
+        android:layout_height="45dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
+        android:text="TextView"
+        app:layout_constraintStart_toEndOf="@+id/iwAvatarInEditPage"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/etLastNameInEditPage"
+        android:layout_width="90dp"
+        android:layout_height="45dp"
+        android:layout_marginTop="20dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.375"
+        app:layout_constraintStart_toEndOf="@+id/etFirstNameInEditPage"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/iwAvatarInEditPage"
+        android:layout_width="158dp"
+        android:layout_height="163dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/anonim" />
+
+    <EditText
+        android:id="@+id/etDescriptionInEditPage"
+        android:layout_width="388dp"
+        android:layout_height="132dp"
+        android:layout_marginBottom="172dp"
+        android:text="TextView"
+        android:textSize="14sp"
+        android:gravity="center_horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.217"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/twRatingInEditPage" />
+
+    <TextView
+        android:id="@+id/twItemsInEditPage"
+        android:layout_width="220dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="16dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.333"
+        app:layout_constraintStart_toEndOf="@+id/iwAvatarInEditPage"
+        app:layout_constraintTop_toBottomOf="@+id/etFirstNameInEditPage" />
+
+    <TextView
+        android:id="@+id/twRatingInEditPage"
+        android:layout_width="69dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="16dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.143"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/iwAvatarInEditPage" />
+
+    <EditText
+        android:id="@+id/etPhoneNumberInEditPage"
+        android:layout_width="211dp"
+        android:layout_height="39dp"
+        android:layout_marginTop="12dp"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintStart_toEndOf="@+id/iwAvatarInEditPage"
+        app:layout_constraintTop_toBottomOf="@+id/twItemsInEditPage" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
