--- a/app/src/main/res/layout/activity_profile_editor.xml
+++ b/app/src/main/res/layout/activity_profile_editor.xml
@@ -9,23 +9,27 @@
     <EditText
         android:id="@+id/etFirstNameInEditPage"
         android:layout_width="90dp"
-        android:layout_height="45dp"
+        android:layout_height="48dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="20dp"
-        android:hint="Имя"
+        android:hint="@string/firstname"
+        android:inputType="textShortMessage"
         app:layout_constraintStart_toEndOf="@+id/iwAvatarInEditPage"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:importantForAutofill="no" />
 
     <EditText
         android:id="@+id/etLastNameInEditPage"
         android:layout_width="90dp"
-        android:layout_height="45dp"
+        android:layout_height="48dp"
         android:layout_marginTop="20dp"
-        android:hint="Фамилия"
+        android:hint="@string/Lastname"
+        android:inputType="textShortMessage"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.375"
         app:layout_constraintStart_toEndOf="@+id/etFirstNameInEditPage"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:importantForAutofill="no" />
 
     <ImageView
         android:id="@+id/iwAvatarInEditPage"
@@ -33,6 +37,7 @@
         android:layout_height="163dp"
         android:layout_marginStart="4dp"
         android:layout_marginTop="20dp"
+        android:contentDescription="@string/avatar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/anonim" />
@@ -42,20 +47,22 @@
         android:layout_width="388dp"
         android:layout_height="132dp"
         android:gravity="center_horizontal"
-        android:hint="Описание"
+        android:hint="@string/DescriptionProfile"
+        android:inputType="textLongMessage"
         android:textSize="14sp"
         app:layout_constraintBottom_toTopOf="@+id/button2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.217"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/twRatingInEditPage" />
+        app:layout_constraintTop_toBottomOf="@+id/twRatingInEditPage"
+        android:importantForAutofill="no" />
 
     <TextView
         android:id="@+id/twItemsInEditPage"
         android:layout_width="220dp"
         android:layout_height="43dp"
         android:layout_marginTop="16dp"
-        android:hint="Предметы"
+        android:hint="@string/Subjects"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.333"
         app:layout_constraintStart_toEndOf="@+id/iwAvatarInEditPage"
@@ -74,19 +81,21 @@
     <EditText
         android:id="@+id/etPhoneNumberInEditPage"
         android:layout_width="211dp"
-        android:layout_height="39dp"
+        android:layout_height="48dp"
         android:layout_marginTop="12dp"
-        android:hint="Номер телефона"
+        android:hint="@string/phoneNumber"
+        android:inputType="phone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toEndOf="@+id/iwAvatarInEditPage"
-        app:layout_constraintTop_toBottomOf="@+id/twItemsInEditPage" />
+        app:layout_constraintTop_toBottomOf="@+id/twItemsInEditPage"
+        android:importantForAutofill="no" />
 
     <Button
         android:id="@+id/button2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Button"
+        android:text="@string/SaveProfile"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
