--- a/app/src/main/res/layout/tutor_lesson_item.xml
+++ b/app/src/main/res/layout/tutor_lesson_item.xml
@@ -7,66 +7,69 @@
 
     <TextView
         android:id="@+id/twTutorLessonTopic"
-        android:layout_width="80dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.059"
         app:layout_constraintStart_toEndOf="@+id/twTutorLessonItem"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/twTutorLessonDate" />
 
     <TextView
         android:id="@+id/twTutorLessonItem"
-        android:layout_width="88dp"
-        android:layout_height="42dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/twTutorLessonDate" />
 
     <TextView
         android:id="@+id/twTutorLessonDate"
-        android:layout_width="203dp"
+        android:layout_width="220dp"
         android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:text="TextView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.076"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/twTutorLessonItem" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/etTutorLessonMark"
-        android:layout_width="105dp"
-        android:layout_height="56dp"
-        android:layout_marginStart="56dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.384"
-        app:layout_constraintStart_toEndOf="@+id/twTutorLessonTopic"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="130dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginEnd="14dp"
         android:digits="0123456789"
-        android:inputType="number"/>
+        android:inputType="number"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.606"
+        app:layout_constraintStart_toEndOf="@+id/twTutorLessonDate"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/btnSaveLessonChanges"
-        android:layout_width="160dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="56dp"
+        android:layout_width="130dp"
+        android:layout_height="57dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="14dp"
         android:text="@string/btnSaveLessonChanges"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/spinnerLessonStatus"
         app:layout_constraintTop_toBottomOf="@+id/etTutorLessonMark" />
 
     <Spinner
         android:id="@+id/spinnerLessonStatus"
-        android:layout_width="203dp"
-        android:layout_height="61dp"
-        android:layout_marginStart="16dp"
+        android:layout_width="220dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="14dp"
         android:layout_marginTop="8dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/twTutorLessonDate"
+        app:layout_constraintTop_toBottomOf="@+id/twTutorLessonItem"
         tools:ignore="SpeakableTextPresentCheck" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
