--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="yellow">#FF9C07</color>
     <color name="grey">#615E59</color>
     <color name="blue">#2A3BA1</color>
+    <color name="testy">#40F542</color>
 </resources>
