add book leasson

--- a/app/src/main/res/layout/activity_tutor_page.xml
+++ b/app/src/main/res/layout/activity_tutor_page.xml
@@ -84,4 +84,13 @@
         app:layout_constraintHorizontal_bias="0.361"
         app:layout_constraintStart_toEndOf="@+id/iwAvatarInTutorPage"
         app:layout_constraintTop_toBottomOf="@+id/twItemsInTutorPage" />
+
+    <Button
+        android:id="@+id/btnBookLeasson"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Записаться на урок"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
