--- a/app/src/main/res/layout/activity_profile_editor.xml
+++ b/app/src/main/res/layout/activity_profile_editor.xml
@@ -59,7 +59,7 @@
     <EditText
         android:id="@+id/etPhoneNumberInEditPage"
         android:layout_width="0dp"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:layout_marginTop="10dp"
         android:hint="@string/phoneNumber"
         android:importantForAutofill="no"
@@ -88,14 +88,24 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iwAvatarInEditPage" />
 
-    <Spinner
-        android:id="@+id/typeUserSpinner"
+    <ListView
+        android:id="@+id/subjectsListView"
         android:layout_width="0dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="10dp"
+        android:layout_height="0dp"
         android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/etDescriptionInEditPage"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnChangeAvatar" />
+
+    <Button
+        android:id="@+id/addSubject"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:text="Добавить предмет"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.692"
         app:layout_constraintStart_toEndOf="@+id/iwAvatarInEditPage"
         app:layout_constraintTop_toBottomOf="@+id/etPhoneNumberInEditPage" />
 
