--- a/app/src/main/res/layout/activity_student_list.xml
+++ b/app/src/main/res/layout/activity_student_list.xml
@@ -4,22 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Activity.TutorLessonActivity">
+    tools:context=".Activity.StudentListActivity">
 
     <ListView
-        android:id="@+id/listViewTutorLesson"
         android:layout_width="409dp"
-        android:layout_height="671dp"
-        app:layout_constraintBottom_toTopOf="@+id/btnCreateLesson"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="2dp" />
-
-    <Button
-        android:id="@+id/btnCreateLesson"
-        android:layout_width="411dp"
-        android:layout_height="67dp"
-        android:text="@string/btnCreateLesson"
+        android:layout_height="729dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
